<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.ecocode</groupId>
    <artifactId>ios-plugin</artifactId>
    <version>1.1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ecoCode iOS plugin</name>
    <description>Help the earth, adopt this green plugin for your applications</description>
    <inceptionYear>2023</inceptionYear>
    <organization>
        <name>green-code-initiative</name>
        <url>https://github.com/green-code-initiative</url>
    </organization>
    <licenses>
        <license>
            <name>GPL v3</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/green-code-initiative/ecoCode-ios/issues</url>
    </issueManagement>
    <scm>
        <connection>scm:git:https://github.com/green-code-initiative/ecoCode-ios</connection>
        <developerConnection>scm:git:https://github.com/green-code-initiative/ecoCode-ios</developerConnection>
        <url>https://github.com/green-code-initiative/ecoCode-ios</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>swift-lang</module>
        <module>pbxproj-lang</module>
        <module>commons-ios</module>
        <module>sonar-ios-plugin</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <encoding>UTF-8</encoding>

        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>

        <sonar.organization>green-code-initiative</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.exclusions>**/generated/**/*.*</sonar.exclusions>
        <sonar.coverage.exclusions>**/generated/**/*.*</sonar.coverage.exclusions>

        <sonarqube.version>9.4.0.54424</sonarqube.version>
        <sonar-packaging.version>1.21.0.505</sonar-packaging.version>
        <sonar-plugin-api-impl.version>9.7.1.62043</sonar-plugin-api-impl.version>
        <sslr.version>1.21</sslr.version>
        <sonar.apacheCommons.version>[2.7,)</sonar.apacheCommons.version>
        <sonar.analyzerCommons.version>2.1.0.1111</sonar.analyzerCommons.version>
        <sonarApple.version>0.1.2</sonarApple.version>
        <antlr.version>4.10</antlr.version>
        <mockito.version>4.4.0</mockito.version>
        <junit.version>4.13.2</junit.version>
        <assertJ.version>3.23.1</assertJ.version>
        <jacoco.version>0.8.11</jacoco.version>

        <!-- Temporary version waiting for real automatic release in ecocode repository -->
        <ecocode-rules-specifications.version>1.5.4</ecocode-rules-specifications.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.sonarsource.sonarqube</groupId>
            <artifactId>sonar-plugin-api</artifactId>
            <version>${sonarqube.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Required since SonarQube > 8.1 -->
        <dependency>
            <groupId>org.sonarsource.sonarqube</groupId>
            <artifactId>sonar-plugin-api-impl</artifactId>
            <version>${sonar-plugin-api-impl.version}</version>
        </dependency>

        <dependency>
            <groupId>org.sonarsource.analyzer-commons</groupId>
            <artifactId>sonar-analyzer-commons</artifactId>
            <version>${sonar.analyzerCommons.version}</version>
        </dependency>

        <dependency>
            <groupId>org.sonarsource.analyzer-commons</groupId>
            <artifactId>sonar-xml-parsing</artifactId>
            <version>${sonar.analyzerCommons.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${sonar.apacheCommons.version}</version>
        </dependency>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr.version}</version>
        </dependency>


        <!-- Test dependencies -->
        <dependency>
            <groupId>org.sonarsource.sonarqube</groupId>
            <artifactId>sonar-testing-harness</artifactId>
            <version>${sonarqube.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.sonarsource.sslr</groupId>
            <artifactId>sslr-testing-harness</artifactId>
            <version>${sslr.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertJ.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.24.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/generated/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.1</version>
                <configuration>
                    <properties>
                        <project.name>ecoCode iOS plugin</project.name>
                        <email>https://www.ecocode.io/</email>
                    </properties>
                    <licenseSets>
                        <licenseSet>
                            <header>com/mycila/maven/plugin/license/templates/GPL-3.txt</header>
                            <includes>
                                <include>**/*.java</include>
                            </includes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
